--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <title>AdminPro</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="google-signin-client_id" content="244447371591-esusbdhcvrudi2q5ch6p7uvktqsf0ki2.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js"></script>
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Favicon icon -->
